File I/O worked out

-added a file input output operation
-added a comment mechanism using '*'
-button resizing