@@ -3,8 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Appliance Tracker" Height="350" Width="525">
     <Grid>
-        <TextBox Name ="ResultBlock" HorizontalAlignment="Left" Height="63" Margin="29,234,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="467" />
-        <Button Content="Load File!" HorizontalAlignment="Left" Width="309" Margin="103,0,0,111" Click ="Load_File_Button_Click"  Height="128" VerticalAlignment="Bottom"/>
+        <TextBox Name ="ResultBlock" HorizontalAlignment="Left" Height="217" Margin="28,47,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="274" />
+        <Button Content="Load File!" HorizontalAlignment="Left" Width="156" Margin="320,0,0,111" Click ="Load_File_Button_Click"  Height="128" VerticalAlignment="Bottom"/>
 
 
     </Grid>
