@@ -4,12 +4,12 @@
 winexe
 C#
 .cs
-C:\Users\steve_000\Documents\GitHub\applianceTracker\WpfApplication1\obj\Debug\
+C:\Users\Steven An\Github\applianceTracker\WpfApplication1\obj\Debug\
 applianceTracker
 none
 false
 DEBUG;TRACE
-C:\Users\steve_000\Documents\GitHub\applianceTracker\WpfApplication1\App.xaml
+C:\Users\Steven An\Github\applianceTracker\WpfApplication1\App.xaml
 11151548125
 
 5-2017746502
