@@ -4,15 +4,15 @@
 winexe
 C#
 .cs
-C:\Users\steve_000\Documents\GitHub\applianceTracker\WpfApplication1\obj\Debug\
+C:\Users\Steven An\Github\applianceTracker\WpfApplication1\obj\Debug\
 applianceTracker
 none
 false
 DEBUG;TRACE
-C:\Users\steve_000\Documents\GitHub\applianceTracker\WpfApplication1\App.xaml
+C:\Users\Steven An\Github\applianceTracker\WpfApplication1\App.xaml
 11151548125
 
-9-1725982620
+9-2068289312
 12-114506869
 MainWindow.xaml;
 
